# dbgrs

./: Cargo.toml
src/: main.rs
tests/: hello.cpp  makefile
trial_1/: Cargo.toml
trial_1/src/: main.rs  main.rsjj
trial_1/tests/: hello.cpp  hello.ilk  hello.rs  makefile
trial_2/: Cargo.toml
trial_2/src/: main.rs
